fix: remove insane z-index on bootbox modals

--- a/less/style.less
+++ b/less/style.less
@@ -66,7 +66,3 @@ a, a:hover, a:visited, a:active, a:focus {
 .taskbar {
 	display: none !important;
 }
-
-.bootbox {
-	z-index: 100001;
-}
